--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Coffee</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="cup">
-            
+            <div class="top">
+                <div class="circle">
+                    <div class="coffee">
+                        
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
