--- a/index.html
+++ b/index.html
@@ -9,13 +9,41 @@
 </head>
 <body>
     <div class="container">
+        <div class="plate">
+            
+        </div>
         <div class="cup">
             <div class="top">
+                <div class="vapour">
+                    <span style="--v:1;"></span>
+                    <span style="--v:3;"></span>
+                    <span style="--v:16;"></span>
+                    <span style="--v:5;"></span>
+                    <span style="--v:13;"></span>
+                    <span style="--v:20;"></span>
+                    <span style="--v:6;"></span>
+                    <span style="--v:7;"></span>
+                    <span style="--v:18;"></span>
+                    <span style="--v:10;"></span>
+                    <span style="--v:8;"></span>
+                    <span style="--v:17;"></span>
+                    <span style="--v:11;"></span>
+                    <span style="--v:12;"></span>
+                    <span style="--v:14;"></span>
+                    <span style="--v:2;"></span>
+                    <span style="--v:9;"></span>
+                    <span style="--v:15;"></span>
+                    <span style="--v:4;"></span>
+                    <span style="--v:19;"></span>
+                </div>
                 <div class="circle">
                     <div class="coffee">
-                        
+
                     </div>
                 </div>
+            </div>
+            <div class="handle">
+
             </div>
         </div>
     </div>
